<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>pro.javadev</groupId>
    <artifactId>sql-qb</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>SQL Lexer/Tokenizer/Parser/Renderer</name>

    <developers>
        <developer>
            <email>ihontarenko@gmail.com</email>
            <name>Ivan Hontarenko</name>
            <organization>Borisovich Inc. [http://javadev.pro/]</organization>
            <url>https://javadev.pro/sql-qb</url>
            <roles>
                <role>owner</role>
            </roles>
            <timezone>Europe/Kyiv</timezone>
        </developer>
    </developers>

    <properties>
        <!-- Project -->
        <buildName>build</buildName>
        <maven.test.skip>true</maven.test.skip>

        <!-- Project -->
        <project.build.encoding>UTF-8</project.build.encoding>
        <project.reporting.outputEncoding>${project.build.encoding}</project.reporting.outputEncoding>
        <project.build.sourceEncoding>${project.build.encoding}</project.build.sourceEncoding>

        <!-- Java -->
        <java.version>16</java.version>

        <!-- Dependencies -->

        <!-- Maven Plugins -->
        <maven-compiler.version>3.8.1</maven-compiler.version>
        <maven.compile.source>${java.version}</maven.compile.source>
        <maven.compile.target>${java.version}</maven.compile.target>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Dependencies -->

    </dependencies>

    <build>
        <finalName>${buildName}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
